--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "bundle/gundo"]
 	path = bundle/gundo
 	url = https://github.com/sjl/gundo.vim.git
+[submodule "bundle/MiniBufExplorer"]
+	path = bundle/MiniBufExplorer
+	url = https://github.com/fholgado/minibufexpl.vim.git
