--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "bundle/MiniBufExplorer"]
 	path = bundle/MiniBufExplorer
 	url = https://github.com/fholgado/minibufexpl.vim.git
+[submodule "bundle/ruby-debugger"]
+	path = bundle/ruby-debugger
+	url = https://github.com/astashov/vim-ruby-debugger.git
