--- a/.gitmodules
+++ b/.gitmodules
@@ -43,3 +43,6 @@
 [submodule "bundle/vim-slime"]
 	path = bundle/vim-slime
 	url = git://github.com/jpalardy/vim-slime.git
+[submodule "bundle/applescript-syntax"]
+	path = bundle/applescript-syntax
+	url = https://github.com/vim-scripts/applescript.vim.git
