--- a/.gitmodules
+++ b/.gitmodules
@@ -46,3 +46,6 @@
 [submodule "bundle/applescript-syntax"]
 	path = bundle/applescript-syntax
 	url = https://github.com/vim-scripts/applescript.vim.git
+[submodule "bundle/CSApprox"]
+	path = bundle/CSApprox
+	url = https://github.com/godlygeek/csapprox.git
