--- a/.gitconfig
+++ b/.gitconfig
@@ -5,6 +5,12 @@
   # Start a new local repository and perform initial commit
   this = !git init && git add . && git commmit -m \"Initial commit\"
 
+  # Find my branches (for work)
+  my = !git for-each-ref --format=\"%(refname:short)\" refs/heads/cn-\\* | xargs git branch --list
+
+  # Find my fix branches
+  fix = !git for-each-ref --format=\"%(refname:short)\" refs/heads/cn-fix-\\* | xargs git branch --list
+
 [user]
   name = Christian Nilsson
   email = christian@klamby.com
