--- a/.gitconfig
+++ b/.gitconfig
@@ -11,6 +11,8 @@
   # Find my fix branches
   fix = !git for-each-ref --format=\"%(refname:short)\" refs/heads/cn-fix-\\* | xargs git branch --list
 
+  jedi = push --force
+
 [user]
   name = Christian Nilsson
   email = christian@klamby.com
