--- a/tmux.conf
+++ b/tmux.conf
@@ -1,7 +1,7 @@
 # remap prefix to Control + a
 unbind C-b
-set -g prefix C-s
-bind C-s send-prefix
+set -g prefix C-a
+bind C-a send-prefix
 
 # reload .tmux.conf
 bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
