Add tpm to tmux

--- a/tmux.conf
+++ b/tmux.conf
@@ -56,3 +56,8 @@ bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 # update default binding of 'enter' to also use copy-pipe
 unbind -t vi-copy Enter
 bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+
+# Plugins
+set -g @plugin "tmux-plugins/tpm"
+
+run "~/dotfiles/tmux/plugins/tpm/tpm"
