--- a/tmux.conf
+++ b/tmux.conf
@@ -57,7 +57,8 @@ bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 unbind -t vi-copy Enter
 bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
 
-# Plugins
+# Plugins (`prefix + I` to fetch and source the plugins)
 set -g @plugin "tmux-plugins/tpm"
+set -g @plugin "tmux-plugins/tmux-yank"
 
 run "~/dotfiles/tmux/plugins/tpm/tpm"
