--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,10 @@ eclim/*
 plugin/eclim.vim
 .DS_Store
 .vim/bundle/
+Bitwarden CLI/
+com.github.kbialek.ulauncher-bitwarden.db
+htop/
+nodemon.json
+update-notifier-npm.json
+dconf/
+pulse/
